[package]
name = "number-to-words-ru"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Translate number into russian words"
repository = "https://github.com/felleet/number-to-words-ru"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
